front started and linked to back

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.address=192.168.0.14
+server.port=8080
+spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
+spring.datasource.url=jdbc:hsqldb:hsql://192.168.0.14/archeBDD
+spring.datasource.username=SA
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
